# chloe-os

./: .gitignore  ETHICS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docker/: Dockerfile  docker-compose.yml
docs/: index.md  mkdocs.yml
docs/developer/: api-reference.md  architecture.md  contributing.md
docs/ethics/: disclaimers.md  responsible-use.md  when-to-see-a-vet.md
docs/guide/: getting-sequencing.md  getting-started.md  next-steps.md  understanding-results.md
docs/science/: canine-immunology.md  dna-and-mutations.md  mhc-binding.md  mrna-vaccines.md  neoantigens.md
docs/superpowers/specs/: 2026-03-22-chloe-heart-design.md
examples/sample_canine_ecg/: README.md  ecg.csv
examples/sample_canine_tumor/: README.md  tumor.vcf
