[project]
name = "chloe-os"
version = "0.1.0"
description = "Open Source Intelligence for Lifelong Pet Health — Personalized cancer vaccine pipeline for pets"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Chloe OS Contributors" },
]
dependencies = [
    "chloe-core",
    "chloe-cli",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]
keywords = ["cancer", "neoantigen", "mRNA", "veterinary", "genomics", "personalized-medicine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
chloe-core = { workspace = true }
chloe-cli = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["packages/chloe-core/tests", "packages/chloe-cli/tests", "tests"]
addopts = "-v --tb=short"
